<resources>
    <string name="app_name">Multi-Reminder</string>
    <string name="tab_text_1">List</string>
    <string name="tab_text_2">Calendar</string>
    <string name="TaskTitle">Task Title</string>
    <string-array name="Category">
        <item>Medicine</item>
        <item>Food</item>
        <item>Travel</item>
        <item>New Category</item>
    </string-array>
    <string name="ChooseCategory">Choose Category</string>
    <string name="choose_time">Choose Time</string>
    <string name="time_pm">PM</string>
    <string-array name="Frequency">
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string name="frequencySpinner">Frequency</string>
    <string name="monday">M</string>
    <string name="sunday">S</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="friday">F</string>
    <string name="complete">Complete</string>
    <string name="snooze">Snooze</string>
    <string name="snooze_duration">Snooze Duration</string>
    <string name="num_of_snoozes"># of Snoozes</string>
    <string name="reminder_time">Reminder Time</string>

    <string-array name="Months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="Days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <!--    Notifications    -->
    <string name="low_priority_reminder">Low Priority Reminder</string>
    <string name="medium_priority_reminder">Medium Priority Reminder</string>
    <string name="high_priority_reminder">High Priority Reminder</string>

</resources>