<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/TaskTitle"
                android:theme="@style/AppTheme.AppBarOverlay"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:inputType="textCapWords"
                android:id="@+id/taskTitle"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_check_24"
                android:layout_centerVertical="true"
                android:background="?android:selectableItemBackground"
                android:padding="10dp"
                android:id="@+id/submitButton"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:entries="@array/Category"
        android:prompt="@string/ChooseCategory" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/reminder_time"
            android:gravity="center_vertical"
            android:paddingEnd="5dp"
            android:textSize="15dp"
            android:textColor="@color/colorDark"/>

        <EditText
            android:id="@+id/choose_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="time"
            android:focusableInTouchMode="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:hint="@string/choose_time"
            android:layout_marginRight="30dp"/>

    </LinearLayout>

    <Spinner
        android:id="@+id/frequencySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/Frequency"
        android:minHeight="50dp"
        android:prompt="@string/frequencySpinner" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/WeeklyView"
        android:visibility="visible"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="30dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_marginVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_marginVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_marginVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_marginVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_marginVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_marginVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_marginVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

<!--    Month Frequency-->
    <Spinner
        android:id="@+id/MonthlyView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/Days"
        android:visibility="gone"/>

<!--    Yearly Frequency-->
    <LinearLayout
        android:id="@+id/YearlyView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/Months"
            android:id="@+id/listOfMonths"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/Days"
            android:id="@+id/yearlyDays"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/snooze"
            android:gravity="center_vertical"
            android:textSize="15dp"
            android:textColor="@color/colorDark"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="time"
            android:focusableInTouchMode="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:hint="@string/snooze_duration"
            android:id="@+id/snoozeDuration"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="10dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="number"
            android:hint="@string/num_of_snoozes"
            android:id="@+id/numberOfSnoozes"/>

    </LinearLayout>

</LinearLayout>